# AzureRTOSBLEGW

AzRTosBLE/: CMakeLists.txt  app_manifest.json  rtcoremain.c
AzRTosBLE/threadx/ports_module/cortex-m4/iar/example_build/: sample_threadx.dep  sample_threadx_module.dep  sample_threadx_module_manager.dep  tx.dep  txm.dep
AzRTosBLE/threadx/ports_module/cortex-m4/iar/example_build/settings/: azure_rtos.wsdt  sample_threadx.Debug.cspy.bat  sample_threadx.Debug.cspy.ps1  sample_threadx.Debug.general.xcl
